// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EU - Icon Branded - icon facebook renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--facebook\\"></use>
</svg>
"
`;

exports[`EU - Icon Branded - icon google-plus renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--google-plus\\"></use>
</svg>
"
`;

exports[`EU - Icon Branded - icon instagram renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--instagram\\"></use>
</svg>
"
`;

exports[`EU - Icon Branded - icon linkedin renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--linkedin\\"></use>
</svg>
"
`;

exports[`EU - Icon Branded - icon pinterest renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--pinterest\\"></use>
</svg>
"
`;

exports[`EU - Icon Branded - icon rss renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--rss\\"></use>
</svg>
"
`;

exports[`EU - Icon Branded - icon skype renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--skype\\"></use>
</svg>
"
`;

exports[`EU - Icon Branded - icon twitter renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--twitter\\"></use>
</svg>
"
`;

exports[`EU - Icon Branded - icon youtube renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#branded--youtube\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon audio renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--audio\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon book renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--book\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon brochure renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--brochure\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon budget renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--budget\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon calendar renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--calendar\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon copy renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--copy\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon data renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--data\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon digital renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--digital\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon edit renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--edit\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon energy renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--energy\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon euro renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--euro\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon faq renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--faq\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon feedback renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--feedback\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon file renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--file\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon gear renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--gear\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon generic-lang renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--generic-lang\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon global renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--global\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon growth renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--growth\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon image renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--image\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon infographic renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--infographic\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon language renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--language\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon livestreaming renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--livestreaming\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon location renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--location\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon multiple-files renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--multiple-files\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon organigram renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--organigram\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon package renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--package\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon presentation renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--presentation\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon print renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--print\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon regulation renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--regulation\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon search renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--search\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon share renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--share\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon spinner renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--spinner\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon spreadsheet renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--spreadsheet\\"></use>
</svg>
"
`;

exports[`EU - Icon General - icon video renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#general--video\\"></use>
</svg>
"
`;

exports[`EU - Icon Notifications - icon error renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#notifications--error\\"></use>
</svg>
"
`;

exports[`EU - Icon Notifications - icon information renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#notifications--information\\"></use>
</svg>
"
`;

exports[`EU - Icon Notifications - icon success renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#notifications--success\\"></use>
</svg>
"
`;

exports[`EU - Icon Notifications - icon warning renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#notifications--warning\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon check renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--check\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon check-filled renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--check-filled\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon close renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--close\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon close-filled renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--close-filled\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon corner-arrow renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--corner-arrow\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon download renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--download\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon external renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--external\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon fullscreen renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--fullscreen\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon rounded-arrow renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--rounded-arrow\\"></use>
</svg>
"
`;

exports[`EU - Icon UI - icon solid-arrow renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\">
  <use xlink:href=\\"static/icons.svg#ui--solid-arrow\\"></use>
</svg>
"
`;
